tests/ui/string_lone_brace.stderr
Error [E0001]: a lone `}` inside quoted text
  --> tests/ui/string_lone_brace.jet:2:14
    |
  2 |     print("a } b");
    |              ^
 Why: inside quoted text, `{` and `}` mark an interpolated value, so a literal brace is doubled
 Fix: write `}}` to print a `}`
